# DevOps-AI-Agent

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTENSION_SUMMARY.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  README.md  SECURITY_GUARANTEES.md  SUMMARY_OF_CHANGES.md  docker-compose.yml  mcp-config.example.json  pyproject.toml  requirements-dev.txt  requirements.txt  usage-readme.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  platform_support.md
.github/workflows/: ci.yml
agent/: __init__.py  classifier.py  core.py  grounding.py  prompts.py
api/: __init__.py  server.py  webhook_auth.py
collectors/: argocd.py  aws.py  azure.py  azure_devops.py  bamboo.py  cloud_registry.py  database_policy.py  docker.py  gcp.py  github.py  gitlab.py  helm.py  jenkins.py  k8s.py  security_scanner.py  server.py  server_enhanced.py
devops_agent/: __init__.py  cli.py
devops_mcp/: __init__.py  registry.py  server.py
docker/: Dockerfile
docs/: API_REFERENCE.md  API_TESTING.md  BUILD_AND_USAGE.md  CENTRALIZED_DEPLOYMENT.md  COVERAGE_GAPS.md  DEPLOYMENT.md  DEVSECOPS_GUIDE.md  E2E_EC2_DOCKER_TEST.md  ESCALATION.md  FEATURES_SUMMARY.md  FINAL_COMPREHENSIVE_STATUS.md  FINAL_STATUS.md  GETTING_STARTED.md  MULTI_PLATFORM_GUIDE.md  ORGANIZATIONAL_GUIDE.md  PLATFORM_SUPPORT.md  QUESTIONS_ANSWERED.md  README.md  SECURITY_POLICY.md  SECURITY_SUMMARY.md  START_HERE.md
k8s/: deployment.yaml  rbac.yaml  service-configmap.yaml
postman/: DevOps-AI-Agent-Local.postman_environment.json  DevOps-AI-Agent.postman_collection.json  README.md
scripts/: build_docker.sh  build_package.sh  ec2-docker-test-setup.sh  install_dependencies.sh  simulate_incident.py  test_api_flow.sh  verify_setup.sh
services/: __init__.py  escalation.py  incident_queue.py  incident_store.py  org_config.py  org_context.py  org_docs.py  pii_scrubber.py
storage/: __init__.py  azure_storage.py  base.py  factory.py  gcs_storage.py  memory_storage.py  s3_storage.py
tests/: test_agent.py  test_basic.py  test_escalation.py  test_fix_suggestions.py  test_helm_iac.py  test_security.py  test_services.py  test_ssh_remote.py  test_webhook_auth.py
tools/: __init__.py  argocd_tools.py  cicd_tools.py  cloud_tools.py  documentation_generator.py  email_notifier.py  executor.py  fix_suggestions.py  fix_verifier.py  github_tools.py  helm_tools.py  iac_tools.py  jira_tools.py  k8s_tools.py  notify.py  safe_executor_enhanced.py  safety.py  ssh_utils.py  zoho_tools.py
